# ApplicationProcessTracker

./: .gitignore  AddEntryDialog.ui  ApplicationProcessTracker_de_DE.ts  ApplicationProcessTracker_en_US.ts  ApplicationProcessTracker_ru_RU.ts  CMakeLists.txt  Entry.h  EntryHelper.cpp  EntryHelper.h  README.md  addentrydialog.cpp  addentrydialog.h  businesslogic.cpp  businesslogic.h  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
